	  to Jean-Damien Durand.
	- Fix a typo preventing OpenSSL libraries built with the VC compiler
	  (i.e. ones with a ".lib" suffix) from being automatically detected
	  on Windows. Fixes part of RT#121084. Thanks to Jean-Damien Durand.
	- Add missing call to va_end() following va_start() in TRACE().
	  Fixes RT#126028. Thanks to Jitka Plesnikova.

1.86_04 2018-07-30
	- Re-add SSLv3_method() for OpenSSL 1.0.2 and above. Fixes
	  RT#101484.
	- Don't expose ENGINE-related functions when building against
	  OpenSSL builds without ENGINE support. Fixes RT#121538. Thanks to
	  Paul Green.
	- Automatically detect OpenSSL 1.0.x on VMS, and update VMS
	  installation instructions to reflect removal of Module::Install
	  from the build system. Fixes RT#124388. Thanks to Craig A. Berry.
	- Prevent memory leak in OCSP_cert2ids() and OCSP_response_verify().
	  Fixes RT#125273. Thanks to Steffen Ullrich.

1.86_03 2018-07-19
	- Convert packaging to ExtUtils::MakeMaker
	- Module::Install is no longer a prerequisite when building
	  from the reposistory.
	- Re-apply patch from ETJ permitting configure and build in
	  places with a space in the name.

1.86_02 2018-07-06
	- Removed inc/ from repository. Module::Install is now a
	  prerequisite when building from the repository. This allowed
	  also removing "." from Makefile.PL lib path which was added
	  in version 1.81. These updates require no changes when
	  building from release packages. They also help AppVeyor
	  builds to work better with old Perls.

	- Added CONTRIBUTING.md, reformatted the previous Changes
          entry to use CPAN::Changes::Spec guidelines and removed
          unused version control tags from comments.

1.86_01 2018-07-04
	[Version control system change]
	- Chris Novakovic did a full conversion from the old Debian
	  hosted SVN repository to git.

	- Fixes to commit metadata, branches and tags that git-svn
	  couldn't handle or had no way of handling, were done